--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,34 @@
-streamlit==1.24.0
-streamlit-webrtc==0.47.1
-av==11.0.0
-opencv-contrib-python==4.8.1.78
-opencv-python==4.7.0.72
-numpy==1.24.3
-mediapipe==0.10.9
+ifaddr==0.2.0
+importlib-metadata==6.11.0
+importlib-resources==6.1.1
 keras==2.15.0
 keras-models==0.0.7
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.6.0
-opencv-python-headless
+kiwisolver==1.4.5
+mediapipe==0.10.9
+ml-dtypes==0.2.0
+murmurhash==1.0.10
+numpy==1.24.3
+oauthlib==3.2.2
+opencv-contrib-python==4.8.1.78
+opencv-python==4.7.0.72
+opencv-python-headless==4.9.0.80
+opt-einsum==3.3.0
+packaging==23.2
+pandas==2.2.0
+Pygments==2.17.2
+pylibsrtp==0.10.0
+Pympler==1.0.1
+pyOpenSSL==24.0.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
+sounddevice==0.4.6
+srsly==2.4.8
+streamlit==1.24.0
+streamlit-webrtc==0.47.1
+tenacity==8.2.3
+tensorboard==2.15.1
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-intel==2.15.0
+tensorflow-io-gcs-filesystem==0.31.0
