--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ oauthlib==3.2.2
 opencv-contrib-python==4.8.1.78
 opencv-python==4.7.0.72
 opencv-python-headless==4.9.0.80
+opencv-contrib-python
 opt-einsum==3.3.0
 packaging==23.2
 pandas==2.2.0
