--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,55 @@
+absl-py==2.1.0
+aioice==0.9.0
+aiortc==1.7.0
+altair==5.2.0
+annotated-types==0.6.0
+astunparse==1.6.3
+attrs==23.2.0
+av==11.0.0
+blinker==1.7.0
+blis==0.7.11
+cachetools==5.3.2
+catalogue==2.0.10
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.16.0
+colorama==0.4.6
+confection==0.1.4
+contourpy==1.2.0
+cryptography==42.0.2
+cycler==0.12.1
+cymem==2.0.8
+dnspython==2.5.0
+flatbuffers==23.5.26
+fonttools==4.47.2
+gast==0.5.4
+gitdb==4.0.11
+GitPython==3.1.41
+google-auth==2.27.0
+google-auth-oauthlib==1.2.0
+google-crc32c==1.5.0
+google-pasta==0.2.0
+grpcio==1.60.1
+h5py==3.10.0
+idna==3.6
 ifaddr==0.2.0
 importlib-metadata==6.11.0
 importlib-resources==6.1.1
+Jinja2==3.1.3
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
 keras==2.15.0
 keras-models==0.0.7
 kiwisolver==1.4.5
+langcodes==3.3.0
+libclang==16.0.6
+Markdown==3.5.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.8.2
+mdurl==0.1.2
 mediapipe==0.10.9
 ml-dtypes==0.2.0
 murmurhash==1.0.10
@@ -12,17 +58,42 @@ oauthlib==3.2.2
 opencv-contrib-python==4.8.1.78
 opencv-python==4.7.0.72
 opencv-python-headless==4.9.0.80
-opencv-contrib-python
 opt-einsum==3.3.0
 packaging==23.2
 pandas==2.2.0
+pathlib==1.0.1
+Pillow==9.5.0
+preshed==3.0.9
+protobuf==3.20.3
+pyarrow==15.0.0
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pycparser==2.21
+pydantic==2.6.0
+pydantic_core==2.16.1
+pydeck==0.8.1b0
+pyee==11.1.0
 Pygments==2.17.2
 pylibsrtp==0.10.0
 Pympler==1.0.1
 pyOpenSSL==24.0.0
 pyparsing==3.1.1
 python-dateutil==2.8.2
+pytz==2024.1
+pytz-deprecation-shim==0.1.0.post0
+referencing==0.33.0
+requests==2.31.0
+requests-oauthlib==1.3.1
+rich==13.7.0
+rpds-py==0.17.1
+rsa==4.9
+six==1.16.0
+smart-open==6.4.0
+smmap==5.0.1
 sounddevice==0.4.6
+spacy==3.7.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 srsly==2.4.8
 streamlit==1.24.0
 streamlit-webrtc==0.47.1
@@ -31,4 +102,26 @@ tensorboard==2.15.1
 tensorboard-data-server==0.7.2
 tensorflow==2.15.0
 tensorflow-estimator==2.15.0
+tensorflow-intel==2.15.0
 tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.4.0
+thinc==8.2.2
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4
+tqdm==4.66.1
+typer==0.9.0
+typing_extensions==4.9.0
+tzdata==2023.4
+tzlocal==4.3.1
+urllib3==2.2.0
+validators==0.22.0
+wasabi==1.1.2
+watchdog==3.0.0
+weasel==0.3.4
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.6.0
+Werkzeug==3.0.1
+wrapt==1.14.1
+zipp==3.17.0
